--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,9 +65,11 @@ bind-key -n M-Down select-pane -D
 bind-key -n M-Right select-pane -R
 
 set -g mouse on
-set -g set-clipboard external
-bind -T root MouseUp2Pane paste
+#set -g set-clipboard external
+#bind -T root MouseUp2Pane paste
 
+# message in status bar displays for 1sec
+set-option display-time 1000
 
 # -----------------------------------------------------------------------------
 # Plugin Manager - https://github.com/tmux-plugins/tpm
