Update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,18 +43,21 @@ setw -g pane-base-index 1
 # Enable full mouse support.
 set -g mouse on
 
+# message in status bar displays for 1sec
+set-option -g display-time 1000
+
 # -----------------------------------------------------------------------------
 # Key bindings
 # -----------------------------------------------------------------------------
 
 #unbind C-b
-unbind '"'
-unbind %
+#unbind '"'
+#unbind %
 
 # Reload the tmux config.
-bind-key r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf; display-message "reloaded"
 
-# Split panes.
+# Split panes
 bind-key h split-window -v
 bind-key v split-window -h
 
@@ -68,8 +71,6 @@ set -g mouse on
 #set -g set-clipboard external
 #bind -T root MouseUp2Pane paste
 
-# message in status bar displays for 1sec
-set-option display-time 1000
 
 # -----------------------------------------------------------------------------
 # Plugin Manager - https://github.com/tmux-plugins/tpm
