--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,8 @@ set-option -g display-time 1000
 #unbind %
 
 # Reload the tmux config.
-bind-key r source-file ~/.tmux.conf; display-message "reloaded"
+bind-key r source-file ~/.tmux.conf\; display-message "reloaded"
+#bind-key r source-file ~/.tmux.conf
 
 # Split panes
 bind-key h split-window -v
